fix: LSDV-4720: Fix datamanager column styles (#160)
* fix: LSDV-4651: Fix column size when data column is not the last column

* align icons and borders

* fixed resizer line on label

* change style to mod

* make resize handler wider

* change mod name

* add more extra space on the right

* remove the style fix

* fix: LSDV-4720: Fix column styles in DM

* fix: LSDV-4720: Fix datamanager column styles

* align resize content to the middle

* remove empty element

* change header class name on old table

* fix the distance between the checkbox line and next item

* fix text positioning

* add more spacing between text and borders

--- a/src/components/Common/Resizer/Resizer.styl
+++ b/src/components/Common/Resizer/Resizer.styl
@@ -1,18 +1,22 @@
 .resizer
   position: relative;
 
+  &__content
+    margin-left -4px
+    padding-inline 4px
+
   &__handle
     top 0
     left 100%
     height 100%
-    padding 0 6px
+    padding 0 5px
     position absolute
     cursor col-resize
     z-index 100
 
     &::before
       top 0
-      left 0
+      left 50%
       bottom 0
       width 1px
       content ""
@@ -20,6 +24,9 @@
       display block
       background #bdbdbd
       position absolute
+
+    &_quickview::before
+      left 0
 
     &:hover::before,
     &_resizing::before
